@@ -9,6 +9,7 @@ import org.springframework.boot.data.jpa.test.autoconfigure.DataJpaTest;
 import org.springframework.boot.jdbc.test.autoconfigure.AutoConfigureTestDatabase;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.DynamicPropertyRegistry;
 import org.springframework.test.context.DynamicPropertySource;
 import org.testcontainers.postgresql.PostgreSQLContainer;
@@ -22,155 +23,211 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @DataJpaTest
+@ActiveProfiles("test")
 @Testcontainers
 @AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 class ListingRepositoryTest {
 
-    @Container
-    static PostgreSQLContainer postgres = new PostgreSQLContainer("postgres:16-alpine");
+        @Container
+        static PostgreSQLContainer postgres = new PostgreSQLContainer("postgres:16-alpine");
 
-    @DynamicPropertySource
-    static void configureProperties(DynamicPropertyRegistry registry) {
-        registry.add("spring.datasource.url", postgres::getJdbcUrl);
-        registry.add("spring.datasource.username", postgres::getUsername);
-        registry.add("spring.datasource.password", postgres::getPassword);
-        registry.add("spring.datasource.driver-class-name", postgres::getDriverClassName);
+        @DynamicPropertySource
+        static void configureProperties(DynamicPropertyRegistry registry) {
+                registry.add("spring.datasource.url", postgres::getJdbcUrl);
+                registry.add("spring.datasource.username", postgres::getUsername);
+                registry.add("spring.datasource.password", postgres::getPassword);
+                registry.add("spring.datasource.driver-class-name", postgres::getDriverClassName);
 
-        registry.add("spring.flyway.enabled", () -> true);
-        registry.add("spring.flyway.url", postgres::getJdbcUrl);
-        registry.add("spring.flyway.user", postgres::getUsername);
-        registry.add("spring.flyway.password", postgres::getPassword);
-    }
+                registry.add("spring.flyway.enabled", () -> true);
+                registry.add("spring.flyway.url", postgres::getJdbcUrl);
+                registry.add("spring.flyway.user", postgres::getUsername);
+                registry.add("spring.flyway.password", postgres::getPassword);
+        }
 
-    @Autowired
-    private ListingRepository listingRepository;
+        @Autowired
+        private ListingRepository listingRepository;
 
-    @Test
-    void findById_shouldReturnListingWhenItExists() {
-        Listing saved = listingRepository.save(buildListing(
-                "30 Pitt St",
-                "250000",
-                3,
-                1.5,
-                2250
-        ));
+        @Test
+        void findById_shouldReturnListingWhenItExists() {
+                Listing saved = listingRepository.save(buildListing(
+                                "30 Pitt St",
+                                "250000",
+                                3,
+                                1.5,
+                                2250,
+                                50));
 
-        Optional<Listing> result = listingRepository.findById(saved.getId());
+                Optional<Listing> result = listingRepository.findById(saved.getId());
 
-        assertThat(result).isPresent();
-        assertThat(result.get().getAddress()).isEqualTo("30 Pitt St");
-        assertThat(result.get().getPrice()).isEqualByComparingTo("250000");
-    }
+                assertThat(result).isPresent();
+                assertThat(result.get().getAddress()).isEqualTo("30 Pitt St");
+                assertThat(result.get().getPrice()).isEqualByComparingTo("250000");
+                assertThat(result.get().getEnergyStarScore()).isEqualTo(50);
+        }
 
-    @Test
-    void findById_shouldReturnEmptyWhenListingDoesNotExist() {
-        Optional<Listing> result = listingRepository.findById(999999L);
+        @Test
+        void findById_shouldReturnEmptyWhenListingDoesNotExist() {
+                Optional<Listing> result = listingRepository.findById(999999L);
 
-        assertThat(result).isEmpty();
-    }
+                assertThat(result).isEmpty();
+        }
 
-    @Test
-    void findAll_shouldReturnAllListingsWhenFilterIsEmpty() {
-        listingRepository.saveAll(List.of(
-                buildListing("30 Pitt St", "250000", 3, 1.5, 2250),
-                buildListing("40 Oak Ave", "400000", 4, 2.5, 3000)
-        ));
+        @Test
+        void findAll_shouldReturnAllListingsWhenFilterIsEmpty() {
+                listingRepository.saveAll(List.of(
+                                buildListing("30 Pitt St", "250000", 3, 1.5, 2250, 50),
+                                buildListing("40 Oak Ave", "400000", 4, 2.5, 3000, 79)));
 
-        ListingFilter filter = new ListingFilter(null, null, null, null, null);
+                ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
 
-        Page<Listing> result = listingRepository.findAll(
-                ListingSpecification.fromFilter(filter),
-                PageRequest.of(0, 20)
-        );
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20));
 
-        assertThat(result.getTotalElements()).isEqualTo(2);
-    }
+                assertThat(result.getTotalElements()).isEqualTo(2);
+        }
 
-    @Test
-    void findAll_shouldFilterByMinPrice() {
-        listingRepository.saveAll(List.of(
-                buildListing("30 Pitt St", "250000", 3, 1.5, 2250),
-                buildListing("40 Oak Ave", "500000", 4, 2.5, 3000)
-        ));
+        @Test
+        void findAll_shouldFilterByMinPrice() {
+                listingRepository.saveAll(List.of(
+                                buildListing("30 Pitt St", "250000", 3, 1.5, 2250, 50),
+                                buildListing("40 Oak Ave", "500000", 4, 2.5, 3000, 79)));
 
-        ListingFilter filter = new ListingFilter(
-                new BigDecimal("300000"),
-                null,
-                null,
-                null,
-                null
-        );
+                ListingFilter filter = new ListingFilter(
+                                new BigDecimal("300000"),
+                                null,
+                                null,
+                                null,
+                                null,
+                                null);
 
-        Page<Listing> result = listingRepository.findAll(
-                ListingSpecification.fromFilter(filter),
-                PageRequest.of(0, 20)
-        );
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20));
 
-        assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getAddress()).isEqualTo("40 Oak Ave");
-    }
+                assertThat(result.getContent()).hasSize(1);
+                assertThat(result.getContent().getFirst().getAddress()).isEqualTo("40 Oak Ave");
+        }
 
-    @Test
-    void findAll_shouldFilterByMultipleCriteria() {
-        listingRepository.saveAll(List.of(
-                buildListing("Match", "350000", 3, 2.0, 1800),
-                buildListing("Too Cheap", "200000", 3, 2.0, 1800),
-                buildListing("Too Few Beds", "350000", 2, 2.0, 1800),
-                buildListing("Too Small", "350000", 3, 2.0, 1200)
-        ));
+        @Test
+        void findAll_shouldFilterByMultipleCriteria() {
+                listingRepository.saveAll(List.of(
+                                buildListing("Match", "350000", 3, 2.0, 1800, 60),
+                                buildListing("Too Cheap", "200000", 3, 2.0, 1800, 60),
+                                buildListing("Too Few Beds", "350000", 2, 2.0, 1800, 60),
+                                buildListing("Too Small", "350000", 3, 2.0, 1200, 60),
+                                buildListing("Too Low Energy Score", "350000", 3, 2.0, 1600, 35)));
 
-        ListingFilter filter = new ListingFilter(
-                new BigDecimal("300000"),
-                new BigDecimal("400000"),
-                3,
-                2.0,
-                1500
-        );
+                ListingFilter filter = new ListingFilter(
+                                new BigDecimal("300000"),
+                                new BigDecimal("400000"),
+                                3,
+                                2.0,
+                                1500,
+                                50);
 
-        Page<Listing> result = listingRepository.findAll(
-                ListingSpecification.fromFilter(filter),
-                PageRequest.of(0, 20)
-        );
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20));
 
-        assertThat(result.getContent()).hasSize(1);
-        assertThat(result.getContent().get(0).getAddress()).isEqualTo("Match");
-    }
+                assertThat(result.getContent()).hasSize(1);
+                assertThat(result.getContent().getFirst().getAddress()).isEqualTo("Match");
+        }
 
-    @Test
-    void findAll_shouldRespectPagination() {
-        listingRepository.saveAll(List.of(
-                buildListing("A St", "100000", 2, 1.0, 1000),
-                buildListing("B St", "200000", 2, 1.0, 1000),
-                buildListing("C St", "300000", 2, 1.0, 1000)
-        ));
+        @Test
+        void findAll_shouldRespectPagination() {
+                listingRepository.saveAll(List.of(
+                                buildListing("A St", "100000", 2, 1.0, 1000, 40),
+                                buildListing("B St", "200000", 2, 1.0, 1000, 55),
+                                buildListing("C St", "300000", 2, 1.0, 1000, 70)));
 
-        ListingFilter filter = new ListingFilter(null, null, null, null, null);
+                ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
 
-        Page<Listing> result = listingRepository.findAll(
-                ListingSpecification.fromFilter(filter),
-                PageRequest.of(0, 2)
-        );
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 2));
 
-        assertThat(result.getContent()).hasSize(2);
-        assertThat(result.getTotalElements()).isEqualTo(3);
-        assertThat(result.getTotalPages()).isEqualTo(2);
-    }
+                assertThat(result.getContent()).hasSize(2);
+                assertThat(result.getTotalElements()).isEqualTo(3);
+                assertThat(result.getTotalPages()).isEqualTo(2);
+        }
 
-    private Listing buildListing(
-            String address,
-            String price,
-            int beds,
-            double baths,
-            int sqft
-    ) {
-        return Listing.builder()
-                .address(address)
-                .price(new BigDecimal(price))
-                .beds(beds)
-                .baths(baths)
-                .sqft(sqft)
-                .listingUrl("http://example.com/" + address.replace(" ", "-"))
-                .photoUrls(List.of("photo1.jpg", "photo2.jpg"))
-                .build();
-    }
+        @Test
+        void findAll_shouldSortByPriceAscending() {
+                listingRepository.saveAll(List.of(
+                                buildListing("High", "300000", 2, 1.0, 1000, 40),
+                                buildListing("Low", "100000", 2, 1.0, 1000, 40),
+                                buildListing("Mid", "200000", 2, 1.0, 1000, 40)));
+
+                ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
+
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20, org.springframework.data.domain.Sort.by("price").ascending()));
+
+                assertThat(result.getContent())
+                                .extracting(Listing::getAddress)
+                                .containsExactly("Low", "Mid", "High");
+        }
+
+        @Test
+        void findAll_shouldSortByPriceDescending() {
+                listingRepository.saveAll(List.of(
+                                buildListing("High", "300000", 2, 1.0, 1000, 40),
+                                buildListing("Low", "100000", 2, 1.0, 1000, 40),
+                                buildListing("Mid", "200000", 2, 1.0, 1000, 40)));
+
+                ListingFilter filter = new ListingFilter(null, null, null, null, null, null);
+
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20, org.springframework.data.domain.Sort.by("price").descending()));
+
+                assertThat(result.getContent())
+                                .extracting(Listing::getAddress)
+                                .containsExactly("High", "Mid", "Low");
+        }
+
+        @Test
+        void findAll_shouldFilterAndSortTogether() {
+                listingRepository.saveAll(List.of(
+                                buildListing("A", "300000", 3, 2.0, 1600, 60),
+                                buildListing("B", "350000", 3, 2.0, 1700, 60),
+                                buildListing("C", "200000", 2, 1.0, 1200, 40)));
+
+                ListingFilter filter = new ListingFilter(
+                                new BigDecimal("250000"),
+                                null,
+                                3,
+                                null,
+                                null,
+                                null);
+
+                Page<Listing> result = listingRepository.findAll(
+                                ListingSpecification.fromFilter(filter),
+                                PageRequest.of(0, 20, org.springframework.data.domain.Sort.by("price").descending()));
+
+                assertThat(result.getContent())
+                                .extracting(Listing::getAddress)
+                                .containsExactly("B", "A");
+        }
+
+        private Listing buildListing(
+                        String address,
+                        String price,
+                        int beds,
+                        double baths,
+                        int sqft,
+                        int energyStarScore) {
+                return Listing.builder()
+                                .address(address)
+                                .price(new BigDecimal(price))
+                                .beds(beds)
+                                .baths(baths)
+                                .sqft(sqft)
+                                .listingUrl("http://example.com/" + address.replace(" ", "-"))
+                                .photoUrls(List.of("photo1.jpg", "photo2.jpg"))
+                                .energyStarScore(energyStarScore)
+                                .build();
+        }
 }
